--- a/ApiCatalogo/appsettings.json
+++ b/ApiCatalogo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=cursonet8;User Id=postgres;Password=1234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
